# rust-rag

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cuda  Makefile  README.md  manager-system-prompt.txt  readme_mcp.md  todo-cli.md
.claude/skills/manager-agent/: SKILL.md
.gemini/skills/: rag-usage.skill
.gemini/skills/rag-usage/: SKILL.md
.github/workflows/: release-mcp-stdio.yml  release-server.yml
assets/schemas/: decision.json  fact.json  incident.json  note.json  page_component.json  recipe.json  todo.json  workout.json
chrome-extension/: background.js  content.js  index.html  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  popup.html  popup.js  sidepanel.html  styles.css  vite.config.ts
chrome-extension/public/: manifest.json
chrome-extension/src/: App.tsx  SidePanelApp.tsx  sidepanel.tsx  styles.css  types.ts
chrome-extension/src/ai/: tools.ts
chrome-extension/src/components/: AuthSection.tsx  ChatTab.tsx  LocalChatTab.tsx  SearchTab.tsx  SettingsModal.tsx  SmartSaveTab.tsx  StartView.tsx  StatusBar.tsx  StoreTab.tsx  TabBar.tsx
chrome-extension/src/hooks/: useConfig.ts  useConnection.ts  usePageContent.ts
chrome-extension/src/utils/: page-extractor.ts
data/: rag.db-shm  rag.db-wal
deploy/kubernetes/: nvidia-device-plugin.yaml  rust-rag-cuda.yaml  rust-rag-frontend-host.yaml  rust-rag-frontend.yaml  rust-rag-ingress.yaml  rust-rag-mcp-ingress.yaml  rust-rag-runtimeclass.yaml  rust-rag.yaml
docs/: frontend-host-shim.md  mcp-setup.md  messages.md  postgres-migration.md  setup-guide.md  usage.md
eval/: README.md  mine_queries.py  queries.json  run_eval.py
examples/: benchmark.rs  check_schema.rs
frontend/: .dockerignore  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/acp/: page.tsx
frontend/app/assisted/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/code/: page.tsx
frontend/app/entries/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/mcp-setup/: page.tsx
frontend/app/mcp-setup.md/: route.ts
frontend/app/messages/: page.tsx
frontend/app/schemas/: page.tsx
frontend/app/search/: route.ts
frontend/app/share/: page.tsx
frontend/app/start-guide/: page.tsx
frontend/app/start-guide.md/: route.ts
frontend/app/startpage-markdown/: route.ts
frontend/app/startpage.md/: route.ts
frontend/app/store/: route.ts
frontend/app/visualize/: page.tsx
frontend/app/wiki/: page.tsx
frontend/components/: app-header.tsx  providers.tsx
frontend/components/acp/: agent-chat.tsx
frontend/components/ai/: ai-assist-panel.tsx  ai-extract-button.tsx  ai-refine-button.tsx
frontend/components/auth/: device-approve-form.tsx  tokens-list.tsx
frontend/components/chat/: chat-interface.tsx  tool-result-view.tsx
frontend/components/code/: code-browser.tsx
frontend/components/docs/: docs-shell.tsx
frontend/components/entries/: analysis-panel.tsx  attachments-panel.tsx  category-sidebar.tsx  entries-browser.tsx  entries-list.tsx  entry-card.tsx  entry-detail.tsx  entry-form.tsx  entry-peek.tsx  google-drive-linker.tsx  image-upload.tsx  large-items-panel.tsx  markdown-view.tsx  mermaid-block.tsx  structured-data-editor.tsx  structured-data-view.tsx  url-ingest.tsx  whisper-transcribe.tsx  wiki-path-picker.tsx
frontend/components/graph/: clusters.ts  edge-review-list.tsx  embedded-graph.tsx  entry-node.tsx  graph-layout.ts  graph-view.tsx  map-view-3d.tsx  map-view.tsx  relation-item.tsx
frontend/components/integrations/: google-card.tsx  notifications-card.tsx
frontend/components/manager/: memory-panel.tsx
frontend/components/messages/: message-composer.tsx  message-markdown.tsx  messages-interface.tsx
frontend/hooks/: use-hosted-chat.ts  use-local-chat.ts  use-session-state.ts
frontend/lib/: rag-proxy.ts  start-page.ts  utils.ts
frontend/lib/ai/: llm-client.ts  (+3 more)
frontend/public/: manifest.json  sw.js
gemini-rag-extension/: GEMINI.md  gemini-extension.json  index.js  package-lock.json  package.json
gemini-rag-extension/hooks/: hooks.json
go-cli/: README.md  go.mod  main.go  main_test.go
go-cli/acp/: bridge.go  bridge_test.go  conn.go  names.go  types.go
http/: admin.http  auth.http  chat.http  graph.http  health.http  memory.http  query.http  rag.http
mcp-stdio/: Cargo.toml  README.md
mcp-stdio/src/: client.rs  config.rs  lib.rs  login.rs  main.rs  server.rs
migrations/: 0001_documents_chunks.sql  0002_auxiliary_tables.sql  0003_sparse_embeddings.sql  0004_oauth_authorization_codes.sql  0005_entry_path.sql  0006_attachments.sql  0007_document_analysis.sql  0008_typed_entries.sql  0009_ontology_predicates.sql  0010_documents_ontology_status.sql  0011_ontology_edge_dedup.sql  0012_ontology_directed_pair_unique.sql  0013_user_oauth_credentials.sql  0014_push_subscriptions.sql  0015_code_ingestion.sql
scratch/: count_tools.py  test_mcp_markdown.py  test_parsing.js  test_schema.rs
scripts/: export_bge_m3.sh  export_bge_m3_sparse.py  export_bge_m3_sparse.sh  export_bge_reranker_v2_m3.py  export_bge_reranker_v2_m3.sh
shared/llm/: package.json  tsconfig.json
shared/ui/: README.md  package.json  pnpm-lock.yaml
src/: acp_discovery.rs  acp_ws.rs  chunking_md.rs  crypto.rs  lib.rs  main.rs  manager.rs  mcp.rs  notify.rs  ontology.rs  projection.rs  reranker.rs  validation.rs
src/api/: analysis.rs  attachments.rs  auth.rs  chunking.rs  code.rs  dreaming.rs  ingest_url.rs  mod.rs  multimodal.rs  ontology.rs  openai.rs  presence.rs  push.rs  query.rs  schemas.rs  tombstones.rs
src/code/: chunker.rs  ingest.rs  lang.rs  mod.rs  parser.rs
src/config/: mod.rs
src/db/: auth.rs  code.rs  code_store.rs  graph.rs  mod.rs  oauth_creds.rs  postgres.rs  push.rs  schema.rs
src/embedding/: mod.rs
src/integrations/: mod.rs
static-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
static-frontend/chat/: index.html
static-frontend/entries/: index.html
static-frontend/src/: chat.tsx  entries.tsx  index.css  main.tsx
(+87 files in other folders)
