[workspace]
members = [".", "mcp-stdio"]
resolver = "2"

[package]
name = "rust-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.9"
bytemuck = "1.25.0"
futures-util = "0.3.31"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["ndarray", "download-binaries", "tracing"] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
rusqlite = { version = "0.39.0", features = ["bundled", "load_extension"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.9"
thiserror = "2.0.18"
tokenizers = "0.22.2"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v7"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
cookie = "0.18.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
scraper = "0.26.0"
html2md = "0.2.15"
chromiumoxide = "0.9.1"

[dev-dependencies]
ahash = "0.8.12"
axum-test = "20.0.0"
tempfile = "3.27.0"
