[workspace]
members = [".", "mcp-stdio"]
resolver = "2"

[package]
name = "rust-rag"
version = "0.1.0"
edition = "2024"
default-run = "rust-rag"

[features]
default = ["ort-prebuilt"]
# Local dev / CPU-only builds use ort's prebuilt static download (CPU EP only).
ort-prebuilt = ["ort/download-binaries"]
# CUDA builds dlopen onnxruntime at runtime (ORT_DYLIB_PATH); the image must
# ship a CUDA-enabled libonnxruntime.so + libonnxruntime_providers_cuda.so.
# Mutually exclusive with `ort-prebuilt` — build with
# `cargo build --no-default-features --features cuda`.
cuda = ["ort/cuda", "ort/load-dynamic"]

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
bytemuck = "1.25.0"
futures-util = "0.3.31"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "tracing", "std", "api-24", "tls-native", "copy-dylibs"] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
rusqlite = { version = "0.39.0", features = ["bundled", "load_extension"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.9"
thiserror = "2.0.18"
tokenizers = "0.22.2"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.27"
opentelemetry-appender-tracing = "0.27"
tracing-opentelemetry = "0.28"
uuid = { version = "1.18.1", features = ["v7"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
cookie = "0.18.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
scraper = "0.26.0"
html2md = "0.2.15"
pulldown-cmark = { version = "0.13.3", default-features = false }
chromiumoxide = "0.9.1"
sha2 = "0.10.9"
base64 = "0.22.1"
getrandom = "0.3.4"
rmcp = { version = "1.5.0", features = ["macros", "server", "transport-streamable-http-server"] }
tower-service = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
mdns-sd = "0.13"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
deadpool-postgres = "0.14"
pgvector = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
text-splitter = { version = "0.30", features = ["markdown", "tokenizers"] }

[dev-dependencies]
ahash = "0.8.12"
axum-test = "20.0.0"
tempfile = "3.27.0"
