[workspace]

[package]
name = "mcp-stdio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "rustls-tls"] }
rmcp = { version = "1.5.0", features = ["macros", "server", "transport-io"] }
rust-rag = { path = ".." }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[dev-dependencies]
axum = "0.8.9"